# Gradus_Public

./: LICENSE  README.md  files_to_delete.txt
Backend/: .gitignore  firebase.js  index.js  package-lock.json  package.json
Backend/Routes/: ReportEmail.js  login.js  notebooks.js  onBoarding.js  playlists.js  profile.js  savedPlaylist.js  search.js  upload.js  videoplayer.js  videos.js
Backend/config/: r2.config.js  redis.config.js
Backend/firebaseUpload/: courses.json  interests.json  upload.js  uploadInterests.js
Backend/useRouter/: useRouter.js
Backend/utils/: batchWriter.js
Frontend/: .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.mjs
Frontend/hoc/: clientProvider.js
Frontend/src/: middleware.js  server.js
Frontend/store/: ChatBotSlice.js  (+5 more)
Python backend/: debug_router.py.bak  pyproject.toml
Python backend/OrionServer/: .gitignore  qdrant_admin.py  requirements.txt  unified_server.py
Python backend/OrionServer/core/: config.py  lifespan.py  logging_config.py  prompt_cache.py
Python backend/OrionServer/modules/chatbot/: .gitignore  chatbot.py  main.py  pyproject.toml  requirements.txt  router.py
Python backend/OrionServer/modules/chatbot/Storage/: __init__.py  firebase_storage.py  hybrid_storage.py  migration_manager.py  qdrant_storage.py  r2_storage.py  redis_storage.py
Python backend/OrionServer/modules/chatbot/chatbot_utils/: __init__.py
Python backend/OrionServer/modules/video_player/: .gitignore  main.py  profiling_research.html  router.py  seed_dummy_data.py
Python backend/OrionServer/utils/: qdrant.py
(+106 files in other folders)
