[project]
name = "python-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0",
    "fastapi>=0.115.0",
    "firebase-admin>=6.0.0",
    "google-cloud-firestore>=2.13.0",
    "httpx[http2]>=0.27.2",
    "langchain-core>=0.2.0",
    "langgraph>=1.0.4",
    "numpy>=2.3.5",
    "opencv-python-headless>=4.11.0.86",
    "pillow>=12.0.0",
    "pydantic>=2.10.0",
    "pymupdf>=1.26.6",
    "pymupdf4llm>=0.2.7",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.10.0",
    "redis>=5.0.0",
    "requests>=2.31.0",
    "typing-extensions>=4.0.0",
    "uvicorn[standard]>=0.30.0",
]
