[project]
name = "2-0-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0",
    "fastapi>=0.115.0",
    "firebase-admin>=6.0.0",
    "google-cloud-firestore>=2.13.0",
    "httpx>=0.27.0",
    "langchain-core>=0.2.0",
    "langgraph>=1.0.4",
    "pydantic>=2.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "python-dotenv>=1.0.1",
    "qdrant-client>=1.10.0",
    "redis>=5.0.0",
    "requests>=2.31.0",
    "typing-extensions>=4.0.0",
    "uuid>=1.30",
    "uvicorn>=0.30.0",
]
